--- a/Fitnesse/ClientIntegrations/ClientIntegrations.csproj
+++ b/Fitnesse/ClientIntegrations/ClientIntegrations.csproj
@@ -25,7 +25,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\dotnet\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -61,7 +61,7 @@
     <Compile Include="ICertificateValidator.cs" />
     <Compile Include="InspectUserRowFixture.cs" />
     <Compile Include="WarninngResultValidator.cs" />
-    <Compile Include="WebService.cs" />
+    <Compile Include="WebServices.cs" />
     <Compile Include="WebServiceTestBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WsdlHasNotChangedTest.cs" />
