--- a/Fitnesse/ClientIntegrations/ClientIntegrations.csproj
+++ b/Fitnesse/ClientIntegrations/ClientIntegrations.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{2D194BA6-BEC5-49AA-B244-CA70577FF85B}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -74,4 +74,7 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <PropertyGroup>
+    <PostBuildEvent>copy $(TargetDir)$(TargetName).dll $(SolutionDir)..\dotnet\</PostBuildEvent>
+  </PropertyGroup>
 </Project>
